exercises/security/ServiceMesh-GreeterWeather/istio/mtls-to-weatherproxy-destrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: weatherproxy-istio-mtls
spec:
  host: weather-proxy-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
