exercises/security/ServiceMesh-GreeterWeather/istio/weather-serviceEntry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-weather-svc
spec:
  hosts:
  - api.openweathermap.org
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
